refactor: refactor common code an fix documentation errors